--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "styled-components": "^5.3.5"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "starts": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
